Cypress Mochawesome Reports

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "cy:tests:ELECTRON:NORMAL": "cypress run --spec cypress/e2e/Sauce_Demo/*.cy.js --headed",
     "cy:tests:ELECTRON:HEADLESS": "cypress run --spec cypress/e2e/Sauce_Demo/*.cy.js",
 
+    "cy:tests:ELECTRON": "cypress run --spec cypress/e2e/Sauce_Demo/*.cy.js --headed",
     "cy:tests:CHROME": "cypress run --spec cypress/e2e/Sauce_Demo/*.cy.js --headed --browser chrome",
     "cy:tests:FIREFOX": "cypress run --spec cypress/e2e/Sauce_Demo/*.cy.js --headed --browser firefox",
     "cy:tests:EDGE": "cypress run --spec cypress/e2e/Sauce_Demo/*.cy.js --headed --browser edge"
-
+    
   },
   "author": "Rajat Verma",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.5.0"
+    "cypress": "^13.5.0",
+    "cypress-mochawesome-reporter": "^3.6.1"
   }
 }
