--- a/.github/workflows/01_ui_tests_chrome.yml
+++ b/.github/workflows/01_ui_tests_chrome.yml
@@ -18,7 +18,7 @@ on:
       - main
 
 jobs:
-  cypress_ui_tests_chrome:
+  cypress_chrome:
     # Define the machine on which tests will execute
     runs-on: ubuntu-latest
 
