--- a/.github/workflows/03_ui_tests_ALL.yml
+++ b/.github/workflows/03_ui_tests_ALL.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  cypress_ui_tests_ALL_browsers:
+  cypress_ALL_browsers:
     # Define the machine on which tests will execute
     runs-on: ubuntu-latest
 
