--- a/.github/workflows/03_ui_tests_ALL.yml
+++ b/.github/workflows/03_ui_tests_ALL.yml
@@ -2,14 +2,14 @@
 # It supports manual triggers and utilizes a matrix strategy to run tests on 
 # CHROME, FIREFOX, ELECTRON, and EDGE browsers.
 
-name: 03_Tests Execution - All Supported Browsers
+name: 03_All Supported Browsers
 
 on:
   # Manual Trigger with all supported browsers
   workflow_dispatch:
 
 jobs:
-  cypress_ALL_browsers:
+  ui_tests_ALL_browsers:
     # Define the machine on which tests will execute
     runs-on: ubuntu-latest
 
@@ -34,12 +34,12 @@ jobs:
         run: npm ci
 
       # Step 5: Run Cypress tests on all supported browsers from the matrix
-      - name: Run Cypress tests
+      - name: Run Cypress UI tests
         run: npm run cy:tests:${{ matrix.browser }}
         
       # Step 6: Upload test reports as artifacts
       - name: Upload Reports
         uses: actions/upload-artifact@v2
         with:
-          name: Test Reports
+          name: UI Tests Report
           path: cypress/reports
